fix: Correct a few styling issues on mobile

--- a/css/jumoel.scss
+++ b/css/jumoel.scss
@@ -53,9 +53,13 @@ ol {
 .container {
   border-top: 5px solid $brand-color;
   background-color: #fff;
-  padding: 1rem 4rem;
+  padding: 1rem 15px;
 
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.26);
+
+  @media (min-width: 992px) {
+    padding: 1rem 4rem;
+  }
 }
 
 a, a:visited {
@@ -116,6 +120,10 @@ pre {
 
 .content-main {
   padding-bottom: 2em;
+
+  img {
+    max-width: 100%;
+  }
 }
 
 .post-separator {
